# organya

./: CMakeLists.txt  convert.fish  headers  sources
source/: Click.cpp  Click.cpp-new  DefOrg.h-new  DlgEZCopy.cpp-new  DlgEdit.cpp-new  DlgPlayer.cpp  DlgPlayer.cpp-new  DlgSet.cpp  DlgSet.cpp-new  DlgTrack.cpp  DlgTrack.cpp-new  Filer.cpp  Filer.cpp-new  Gdi.cpp-new  Gdi.h-new  MainPut.cpp-new  OrgData.cpp  OrgData.cpp-new  OrgData.h  OrgData.h-new  OrgEdit.cpp-new  OrgFile.cpp-new  OrgFileMIDI.cpp-new  OrgPlay.cpp  OrgPlay.cpp-new  Script1.rc  Script1.res  Scroll.cpp-new  Scroll.h-new  Setting.h-new  Sound.cpp-new  Sound.h-new  Timer.h-new  WinMain.cpp  WinMain.cpp-new  WinTimer.cpp-new  headers  rxoFunction.cpp  rxoFunction.cpp-new  rxoFunction.h-new
